--- a/templates/teacher_settings.html
+++ b/templates/teacher_settings.html
@@ -153,6 +153,9 @@
                                        value="{{ teacher.get('messaging_end_time', '19:00') }}">
                             </div>
                         </div>
+                        <small class="text-muted d-block mb-3">
+                            <i class="bi bi-globe me-1"></i>All times are in <strong>Singapore Time (SGT, UTC+8)</strong>
+                        </small>
                         
                         <div class="mb-3">
                             <label class="form-label">Outside Hours Message</label>
