--- a/templates/teacher_submissions.html
+++ b/templates/teacher_submissions.html
@@ -117,7 +117,7 @@
                         </div>
                     </td>
                     <td>
-                        {{ sub.submitted_at.strftime('%d %b %Y, %H:%M') if sub.submitted_at else 'N/A' }}
+                        {{ (sub.submitted_at|sgt).strftime('%d %b %Y, %H:%M') if sub.submitted_at else 'N/A' }} SGT
                     </td>
                     <td>
                         {% if sub.status == 'approved' %}
